Actualización de código deprecado